--- a/lang/pgc-ru_RU.po
+++ b/lang/pgc-ru_RU.po
@@ -2,236 +2,281 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Plugins Garbage Collector\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-09-27 23:33+0700\n"
+"POT-Creation-Date: 2014-06-28 07:44+0700\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Vladimir <vladimir@shinephp.com>\n"
+"Last-Translator: Vladimir Garagulya <vladimir@shinephp.com>\n"
 "Language-Team: ShinePHP.com <vladimir@shinephp.com>\n"
+"Language: ru_RU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Russian\n"
-"X-Poedit-Country: RUSSIAN FEDERATION\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: .\n"
+"X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SearchPath-0: ..\n"
 
-#: ../pgc-options.php:55
-msgid "Turn on at least one Search checkbox before start Scan process!"
-msgstr "Включите по крайней мере один чек-бокс перед началом процесса сканироваия!"
-
-#: ../pgc-options.php:59
-msgid "Scanning"
-msgstr "Сканирование"
-
-#: ../pgc-options.php:63
-msgid "will take some time. Please confirm to continue"
-msgstr "займет некоторое время. Подтверждите, пожалуйста, чтобы продолжить"
-
-#: ../pgc-options.php:86
-msgid "Select at least one table before click on Delete button"
-msgstr "Выберите по крайней мере одну таблицу перед щелчком по клавише Delete"
-
-#: ../pgc-options.php:89
-msgid "Delete database tables last confirmation: Click \"Cancel\" if you have any doubt."
-msgstr "Последней подтверждение перед операций удаления таблиц из базы данных: Щелкните \"Отмена\", если не уверены."
-
-#: ../pgc-options.php:99
-msgid "Search DB for tables created by plugins"
-msgstr "Искать таблицы, созданные плагинами"
-
-#: ../pgc-options.php:100
-msgid "Search none-WP tables"
-msgstr "Искать таблицы, не принадлежащие WordPress"
-
-#: ../pgc-options.php:103
-msgid "Search DB for changes which plugins made to the original WP tables structure"
-msgstr "Искать изменения, внесенные плагинами в структуру таблиц базы данных WordPress"
-
-#: ../pgc-options.php:104
-msgid "Search WP tables structure changes (beta - experimental)"
-msgstr "Найти изменения в структуре таблиц WordPress (бета - эксперимент)"
-
-#: ../pgc-options.php:107
-msgid "Include tables which are hidden by your request to the search results"
-msgstr "Включить скрытые вами таблицы в результаты сканирования"
-
-#: ../pgc-options.php:108
-msgid "Show hidden tables"
-msgstr "Показать скрытые таблицы"
-
-#: ../pgc-options.php:112
-#: ../plugins-garbage-collector.php:88
-msgid "Scan"
-msgstr "Сканирование"
-
-#: ../pgc-options.php:112
-msgid "Click this button to gather information how plugins use your WordPress database"
-msgstr "Щелкните &lt;Сканирование&gt;, чтобы собрать информацию о том, как плагины используют базу данных вашего WordPress"
-
-#: ../pgc-options.php:127
-msgid "About this Plugin:"
-msgstr "Об этом плагине:"
-
-#: ../pgc-options.php:128
-msgid "Author's website"
-msgstr "Вебсайт автора"
-
-#: ../pgc-options.php:129
-msgid "Plugin webpage"
-msgstr "Вебстраница плагина"
-
-#: ../pgc-options.php:130
-#: ../plugins-garbage-collector.php:98
-msgid "Changelog"
-msgstr "История изменений"
-
-#: ../pgc-options.php:131
-msgid "FAQ"
-msgstr "FAQ"
-
-#: ../pgc-options.php:132
-msgid "Donate"
-msgstr "Поддержка"
-
-#: ../pgc-options.php:135
-msgid "Greetings:"
-msgstr "Благодарности:"
-
-#: ../pgc-options.php:137
-msgid "It's me, the author"
-msgstr "Это я, автор"
-
-#: ../pgc-options.php:138
-msgid "For the help with Czech translation"
-msgstr "За помощь с чешским переводом"
-
-#: ../pgc-options.php:139
-msgid "For the help with French translation"
-msgstr "За помощь с французским переводом"
-
-#: ../pgc-options.php:140
-msgid "For the help with German translation"
-msgstr "За помощь с немецким переводом"
-
-#: ../pgc-options.php:141
-msgid "For the help with Indonesian translation"
-msgstr "За помощь с индонезийским переводом"
-
-#: ../pgc-options.php:142
-msgid "For the help with Italian translation"
-msgstr "За помощь с итальянским переводом"
-
-#: ../pgc-options.php:143
-msgid "For the help with Japanese translation"
-msgstr "За помощь с японским переводом"
-
-#: ../pgc-options.php:144
-msgid "For the help with Spanish translation"
-msgstr "За помощь с испанским переводом"
-
-#: ../pgc-options.php:146
-msgid "Do you wish to see your name with link to your site here? You are welcome! Your help with translation and new ideas are very appreciated."
-msgstr "Желаете увидеть здесь свое имя и ссылку на ваш сайт? Добро пожаловать! Ваша помощь с переводом и новые идеи будут как нельзя кстати."
-
-#: ../pgc-options.php:148
-msgid "More plugins from"
-msgstr "Ещё плагины от"
-
-#: ../pgc-lib.php:254
-#: ../pgc-lib.php:381
+#: ../pgc-lib.php:250 ../pgc-lib.php:377
 msgid "Hide"
 msgstr "Скрыть"
 
-#: ../pgc-lib.php:255
-#: ../pgc-lib.php:382
+#: ../pgc-lib.php:251 ../pgc-lib.php:378
 msgid "Table Name"
 msgstr "Название таблицы"
 
-#: ../pgc-lib.php:256
+#: ../pgc-lib.php:252
 msgid "Records #"
 msgstr "Записей #"
 
-#: ../pgc-lib.php:257
+#: ../pgc-lib.php:253
 msgid "KBytes #"
 msgstr "Килобайт #"
 
-#: ../pgc-lib.php:258
-#: ../pgc-lib.php:384
+#: ../pgc-lib.php:254 ../pgc-lib.php:380
 msgid "Plugin Name"
 msgstr "Название плагина"
 
-#: ../pgc-lib.php:259
-#: ../pgc-lib.php:385
+#: ../pgc-lib.php:255 ../pgc-lib.php:381
 msgid "Plugin State"
 msgstr "Состояние плагина"
 
-#: ../pgc-lib.php:267
-msgid "Let's see what tables in your database do not belong to the core WordPress installation:"
-msgstr "Давайте посмотрим, какие таблицы в вашей базе данных не принадлежат основной установке WordPress:"
+#: ../pgc-lib.php:263
+msgid ""
+"Let's see what tables in your database do not belong to the core WordPress "
+"installation:"
+msgstr ""
+"Давайте посмотрим, какие таблицы в вашей базе данных не принадлежат основной "
+"установке WordPress:"
 
-#: ../pgc-lib.php:347
-#: ../pgc-lib.php:548
-msgid "Some tables are hidden by you. Turn on \"Show hidden DB tables\" option and click \"Scan\" button again to show them."
-msgstr "Некоторые таблицы скрыты вами. Включи опцию \"Показать скрытые таблицы\" и щелкни \"Сканировать\", чтобы отобразить из снова."
+#: ../pgc-lib.php:343 ../pgc-lib.php:546
+msgid ""
+"Some tables are hidden by you. Turn on \"Show hidden DB tables\" option and "
+"click \"Scan\" button again to show them."
+msgstr ""
+"Некоторые таблицы скрыты вами. Включи опцию \"Показать скрытые таблицы\" и "
+"щелкни \"Сканировать\", чтобы отобразить из снова."
 
-#: ../pgc-lib.php:355
+#: ../pgc-lib.php:351
 msgid "Delete Tables"
 msgstr "Удалить Таблицы"
 
-#: ../pgc-lib.php:359
-#: ../pgc-lib.php:560
+#: ../pgc-lib.php:355 ../pgc-lib.php:558
 msgid "Attention!"
 msgstr "Внимание!"
 
-#: ../pgc-lib.php:360
-msgid "Operation rollback is not possible. Consider to make database backup first. Please double think before click <code>Delete Tables</code> button."
-msgstr "Откат операции не возможен. Сделайте резервную копию базы данных сначала. Пожалуйста, хорошо подумайте перед щелчком по кнопке <code>Удалить Таблицы</code>"
+#: ../pgc-lib.php:356
+msgid ""
+"Operation rollback is not possible. Consider to make database backup first. "
+"Please double think before click <code>Delete Tables</code> button."
+msgstr ""
+"Откат операции не возможен. Сделайте резервную копию базы данных сначала. "
+"Пожалуйста, хорошо подумайте перед щелчком по кнопке <code>Удалить Таблицы</"
+"code>"
 
-#: ../pgc-lib.php:369
+#: ../pgc-lib.php:365
 msgid "Congratulations! It seems that your WordPress database is clean."
 msgstr "Поздравляем! Похоже, что ваша WordPress база данных чиста."
 
-#: ../pgc-lib.php:383
+#: ../pgc-lib.php:379
 msgid "Extra Field"
 msgstr "Добавл. поле"
 
-#: ../pgc-lib.php:556
+#: ../pgc-lib.php:554
 msgid "Delete Extra Columns"
 msgstr "Удалить столбцы"
 
-#: ../pgc-lib.php:561
-msgid "Operation rollback is not possible. Consider to make database backup first. Please double think before click <code>Delete Extra Columns</code> button."
-msgstr "Откат операции не возможен. Сделайте резервную копию базы данных сначала. Пожалуйста, хорошо подумайте перед щелчком по кнопке <code>Удалить Таблицы</code>"
+#: ../pgc-lib.php:559
+msgid ""
+"Operation rollback is not possible. Consider to make database backup first. "
+"Please double think before click <code>Delete Extra Columns</code> button."
+msgstr ""
+"Откат операции не возможен. Сделайте резервную копию базы данных сначала. "
+"Пожалуйста, хорошо подумайте перед щелчком по кнопке <code>Удалить Таблицы</"
+"code>"
 
-#: ../pgc-lib.php:570
-msgid "Congratulations! It seems that your WordPress database tables structure is not changed"
+#: ../pgc-lib.php:568
+msgid ""
+"Congratulations! It seems that your WordPress database tables structure is "
+"not changed"
 msgstr "Поздравляем! Похоже, что ваша WordPress база данных чиста."
 
-#: ../pgc-lib.php:583
-msgid "This feature is still in production and will be realized in the next version"
+#: ../pgc-lib.php:581
+msgid ""
+"This feature is still in production and will be realized in the next version"
 msgstr "Эта функция ещё в разработке и будет реализована в следующей версии"
 
-#: ../pgc-lib.php:605
-#: ../pgc-lib.php:620
-msgid "No items found."
-msgstr "Ничего не найдено."
+#: ../pgc-options.php:48
+msgid "Turn on at least one Search checkbox before start Scan process!"
+msgstr ""
+"Включите по крайней мере один чек-бокс перед началом процесса сканироваия!"
 
-#: ../pgc-lib.php:608
-msgid "Recent Posts:"
-msgstr "Последние статьи:"
+#: ../pgc-options.php:52
+msgid "Scanning"
+msgstr "Сканирование"
 
-#: ../plugins-garbage-collector.php:41
+#: ../pgc-options.php:56
+msgid "will take some time. Please confirm to continue"
+msgstr "займет некоторое время. Подтверждите, пожалуйста, чтобы продолжить"
+
+#: ../pgc-options.php:79
+msgid "Select at least one table before click on Delete button"
+msgstr "Выберите по крайней мере одну таблицу перед щелчком по клавише Delete"
+
+#: ../pgc-options.php:82
+msgid ""
+"Delete database tables last confirmation: Click \"Cancel\" if you have any "
+"doubt."
+msgstr ""
+"Последней подтверждение перед операций удаления таблиц из базы данных: "
+"Щелкните \"Отмена\", если не уверены."
+
+#: ../pgc-options.php:92
+msgid "Search DB for tables created by plugins"
+msgstr "Искать таблицы, созданные плагинами"
+
+#: ../pgc-options.php:93
+msgid "Search none-WP tables"
+msgstr "Искать таблицы, не принадлежащие WordPress"
+
+#: ../pgc-options.php:96
+msgid ""
+"Search DB for changes which plugins made to the original WP tables structure"
+msgstr ""
+"Искать изменения, внесенные плагинами в структуру таблиц базы данных "
+"WordPress"
+
+#: ../pgc-options.php:97
+msgid "Search WP tables structure changes (beta - experimental)"
+msgstr "Найти изменения в структуре таблиц WordPress (бета - эксперимент)"
+
+#: ../pgc-options.php:100
+msgid "Include tables which are hidden by your request to the search results"
+msgstr "Включить скрытые вами таблицы в результаты сканирования"
+
+#: ../pgc-options.php:101
+msgid "Show hidden tables"
+msgstr "Показать скрытые таблицы"
+
+#: ../pgc-options.php:105 ../plugins-garbage-collector.php:100
+msgid "Scan"
+msgstr "Сканирование"
+
+#: ../pgc-options.php:105
+msgid ""
+"Click this button to gather information how plugins use your WordPress "
+"database"
+msgstr ""
+"Щелкните &lt;Сканирование&gt;, чтобы собрать информацию о том, как плагины "
+"используют базу данных вашего WordPress"
+
+#: ../pgc-options.php:120
+msgid "About this Plugin:"
+msgstr "Об этом плагине:"
+
+#: ../pgc-options.php:121
+msgid "Author's website"
+msgstr "Вебсайт автора"
+
+#: ../pgc-options.php:122
+msgid "Plugin webpage"
+msgstr "Вебстраница плагина"
+
+#: ../pgc-options.php:123 ../plugins-garbage-collector.php:110
+msgid "Changelog"
+msgstr "История изменений"
+
+#: ../pgc-options.php:124
+msgid "FAQ"
+msgstr "FAQ"
+
+#: ../pgc-options.php:125
+msgid "Donate"
+msgstr "Поддержка"
+
+#: ../pgc-options.php:128
+msgid "Greetings:"
+msgstr "Благодарности:"
+
+#: ../pgc-options.php:130
+msgid "It's me, the author"
+msgstr "Это я, автор"
+
+#: ../pgc-options.php:131
+msgid "For the help with Chinese translation"
+msgstr "За помощь с китайским переводом"
+
+#: ../pgc-options.php:132
+msgid "For the help with Czech translation"
+msgstr "За помощь с чешским переводом"
+
+#: ../pgc-options.php:133
+msgid "For the help with Dutch translation"
+msgstr "За помощь с датским переводом"
+
+#: ../pgc-options.php:134
+msgid "For the help with French translation"
+msgstr "За помощь с французским переводом"
+
+#: ../pgc-options.php:135
+msgid "For the help with German translation"
+msgstr "За помощь с немецким переводом"
+
+#: ../pgc-options.php:136
+msgid "For the help with Indonesian translation"
+msgstr "За помощь с индонезийским переводом"
+
+#: ../pgc-options.php:137
+msgid "For the help with Italian translation"
+msgstr "За помощь с итальянским переводом"
+
+#: ../pgc-options.php:138
+msgid "For the help with Japanese translation"
+msgstr "За помощь с японским переводом"
+
+#: ../pgc-options.php:139
+msgid "For the help with Lithuanian translation"
+msgstr "За помощь с чешским переводом"
+
+#: ../pgc-options.php:140
+msgid "For the help with Polish translation"
+msgstr "За помощь с польским переводом"
+
+#: ../pgc-options.php:141
+msgid "For the help with Spanish translation"
+msgstr "За помощь с испанским переводом"
+
+#: ../pgc-options.php:143
+msgid "For the help with bug fix and contribution to source code"
+msgstr "За помощь в поиске и исправлении ошибок, разработке кода"
+
+#: ../pgc-options.php:145
+msgid ""
+"Do you wish to see your name with link to your site here? You are welcome! "
+"Your help with translation and new ideas are very appreciated."
+msgstr ""
+"Желаете увидеть здесь свое имя и ссылку на ваш сайт? Добро пожаловать! Ваша "
+"помощь с переводом и новые идеи будут как нельзя кстати."
+
+#: ../plugins-garbage-collector.php:40
 msgid "Plugins Garbage Collector"
 msgstr "Plugins Garbage Collector"
 
-#: ../plugins-garbage-collector.php:43
+#: ../plugins-garbage-collector.php:42
 msgid " requires WordPress 3.0 or newer."
 msgstr " требует WordPress 3.0 или новее"
 
-#: ../plugins-garbage-collector.php:43
+#: ../plugins-garbage-collector.php:42
 msgid "Please update!"
 msgstr "Пожалуйста обновите!"
+
+#~ msgid "More plugins from"
+#~ msgstr "Ещё плагины от"
+
+#~ msgid "No items found."
+#~ msgstr "Ничего не найдено."
+
+#~ msgid "Recent Posts:"
+#~ msgstr "Последние статьи:"
 
 #~ msgid ""
 #~ "Click &lt;Scan&gt; to gather information how plugins use your WordPress "
@@ -239,8 +284,9 @@ msgstr "Пожалуйста обновите!"
 #~ msgstr ""
 #~ "Щелкните &lt;Сканирование&gt;, чтобы собрать информацию о том, как "
 #~ "плагины используют базу данных вашего WordPress"
+
 #~ msgid "Cleanup: please confirm to continue"
 #~ msgstr "Зачистка: пожалуйста подтвердите, чтобы продолжить"
+
 #~ msgid "Action Page"
 #~ msgstr "Страница действий"
-
